Fix media kit styling on mobile

--- a/assets/lunder-institute.css
+++ b/assets/lunder-institute.css
@@ -541,7 +541,7 @@ html {
   .col-sm-3 {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-sm-4, .three_column-header__left, .media-kit-post__thumbnail-container, #resultstable2 > tbody > tr > td {
+  .col-sm-4, .three_column-header__left, #resultstable2 > tbody > tr > td {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-sm-5 {
@@ -553,7 +553,7 @@ html {
   .col-sm-7 {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-sm-8, .three-column-header__collapsible-columns, .media-kit-post__content-container {
+  .col-sm-8, .three-column-header__collapsible-columns {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-sm-9 {
@@ -662,7 +662,7 @@ html {
   .col-md-3, .three_column-header__left, .three_column-header__right, #resultstable2 > tbody > tr > td {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-md-4, .collection-container #resultstable tr td:nth-of-type(3) {
+  .col-md-4, .media-kit-post__thumbnail-container, .collection-container #resultstable tr td:nth-of-type(3) {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-md-5, .two-level-header__site-name, .collection-container #searchtable .content .coll_left_half {
@@ -674,7 +674,7 @@ html {
   .col-md-7, .two-level-header__site-menu, .collection-container #searchtable .content .coll_right_half {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-md-8 {
+  .col-md-8, .media-kit-post__content-container {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-md-9, .three-column-header__collapsible-columns, .three_column-header__middle {
@@ -1308,7 +1308,7 @@ html {
   .col-sm-3 {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-sm-4, .three_column-header__left, .media-kit-post__thumbnail-container, #resultstable2 > tbody > tr > td {
+  .col-sm-4, .three_column-header__left, #resultstable2 > tbody > tr > td {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-sm-5 {
@@ -1320,7 +1320,7 @@ html {
   .col-sm-7 {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-sm-8, .three-column-header__collapsible-columns, .media-kit-post__content-container {
+  .col-sm-8, .three-column-header__collapsible-columns {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-sm-9 {
@@ -1429,7 +1429,7 @@ html {
   .col-md-3, .three_column-header__left, .three_column-header__right, #resultstable2 > tbody > tr > td {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-md-4, .collection-container #resultstable tr td:nth-of-type(3) {
+  .col-md-4, .media-kit-post__thumbnail-container, .collection-container #resultstable tr td:nth-of-type(3) {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-md-5, .two-level-header__site-name, .collection-container #searchtable .content .coll_left_half {
@@ -1441,7 +1441,7 @@ html {
   .col-md-7, .two-level-header__site-menu, .collection-container #searchtable .content .coll_right_half {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-md-8 {
+  .col-md-8, .media-kit-post__content-container {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-md-9, .three-column-header__collapsible-columns, .three_column-header__middle {
@@ -2667,7 +2667,7 @@ pre {
   .col-sm-3 {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-sm-4, .three_column-header__left, .media-kit-post__thumbnail-container, #resultstable2 > tbody > tr > td {
+  .col-sm-4, .three_column-header__left, #resultstable2 > tbody > tr > td {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-sm-5 {
@@ -2679,7 +2679,7 @@ pre {
   .col-sm-7 {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-sm-8, .three-column-header__collapsible-columns, .media-kit-post__content-container {
+  .col-sm-8, .three-column-header__collapsible-columns {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-sm-9 {
@@ -2788,7 +2788,7 @@ pre {
   .col-md-3, .three_column-header__left, .three_column-header__right, #resultstable2 > tbody > tr > td {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-md-4, .collection-container #resultstable tr td:nth-of-type(3) {
+  .col-md-4, .media-kit-post__thumbnail-container, .collection-container #resultstable tr td:nth-of-type(3) {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-md-5, .two-level-header__site-name, .collection-container #searchtable .content .coll_left_half {
@@ -2800,7 +2800,7 @@ pre {
   .col-md-7, .two-level-header__site-menu, .collection-container #searchtable .content .coll_right_half {
     flex: 0 0 58.33333%;
     max-width: 58.33333%; }
-  .col-md-8 {
+  .col-md-8, .media-kit-post__content-container {
     flex: 0 0 66.66667%;
     max-width: 66.66667%; }
   .col-md-9, .three-column-header__collapsible-columns, .three_column-header__middle {
@@ -4109,6 +4109,7 @@ input[type="button"].btn-block {
 .media-kit-post {
   clear: both;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
