--- a/assets/sass/_media-kit.scss
+++ b/assets/sass/_media-kit.scss
@@ -25,6 +25,7 @@
   @extend .row;
   clear: both;
   display: flex;
+	flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
@@ -37,7 +38,7 @@
 }
 
 .media-kit-post__thumbnail-container {
-  @extend .col-12, .col-sm-4;
+  @extend .col-12, .col-md-4;
   float: left;
   padding-top: .75em;
   padding-bottom: .75em;
@@ -53,7 +54,7 @@
 }
 
 .media-kit-post__content-container {
-  @extend .col-12, .col-sm-8;
+  @extend .col-12, .col-md-8;
   float: right;
 
   @media screen and (min-width: map-get($grid-breakpoints, 'md')) {
